--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:ital,wght@0,500;0,700;0,900;1,400&display=swap" rel="stylesheet"> 
-
+    
     <link rel="stylesheet" href="./css/styles.css"/>
 </head>
 <body>
@@ -65,7 +65,7 @@
     <section class="container">
          <div >
           <h1 class="heading">Эффективные решения <br/> для вашего бизнеса</h1>
-          <button class="button" type="button" data-modal-open>Заказать услугу</button>
+          <button class="button-open" type="button" data-modal-open>Заказать услугу</button>
           
          </div>
     </section>
